# warsow

./: README.md  warsow.diff
libsrcs/angelscript/sdk/angelscript/projects/cmake/: CMakeLists.txt
libsrcs/angelscript/sdk/angelscript/source/: as_config.h  as_memory.cpp
source/: CMakeLists.txt  charlotte.sh
source/angelwrap/: CMakeLists.txt
source/cin/: CMakeLists.txt  cin_theora.c
source/client/: CMakeLists.txt  cin.c  cl_sound.c  cl_ui.c  cl_vid.c  ftlib.c
source/cmake/: FindSDL2.cmake  QfusionUtils.cmake
source/ftlib/: CMakeLists.txt  ftlib.c
source/game/: CMakeLists.txt
source/gameshared/: q_arch.h
source/irc/: CMakeLists.txt  irc_logic.c
source/qcommon/: anticheat.c  ascript.c  common.c  compression.c  compression.h  files.c  irc.c  library.c  net.c  steam.c  wswcurl.c
source/ref_gl/: CMakeLists.txt  qgl.h  r_glimp.h  r_imagelib.c  r_register.c
source/sdl/: sdl_glw.c
source/server/: CMakeLists.txt  sv_init.c
source/snd_openal/: CMakeLists.txt  qal.c  qal.h  snd_decoder_ogg.c  snd_local.h  snd_main.c
source/snd_qf/: CMakeLists.txt  snd_local.h  snd_ogg.c
source/tv_server/: CMakeLists.txt
source/unix/: unix_fs.c  unix_net.c  unix_sys.c
source/win32/: win_sys.c
